initial commit of workflow migration

--- a/.github/workflows/pre-commit-pr.yml
+++ b/.github/workflows/pre-commit-pr.yml
@@ -4,46 +4,8 @@ on:
   pull_request:
 
 jobs:
-  common:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: common
-
-  terraform:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: terraform
-
-  golang:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: golang
-
-  renovate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: renovate
+  scan-terraform:
+    uses: defenseunicorns/uds-common-workflows/.github/workflows/terraform-scan.yaml@main
+    with:
+      soft-fail: true
+      github-token: $GITHUB_TOKEN
