--- a/.github/workflows/pre-commit-pr.yml
+++ b/.github/workflows/pre-commit-pr.yml
@@ -7,6 +7,6 @@ jobs:
   scan-terraform:
     uses: defenseunicorns/uds-common-workflows/.github/workflows/terraform-scan.yaml@54-regula-severity
     with:
-      regula-severity: critical 
+      regula-severity: high 
       soft-fail: true 
       github-token: $GITHUB_TOKEN
