soft fail tfsec true
Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>
Co-authored-by: Palassis <MxNxPx@users.noreply.github.com>
Co-authored-by: zamaz <zachariahmiller@users.noreply.github.com>

--- a/.github/workflows/pre-commit-pr.yml
+++ b/.github/workflows/pre-commit-pr.yml
@@ -8,5 +8,5 @@ jobs:
     uses: defenseunicorns/uds-common-workflows/.github/workflows/terraform-scan.yaml@main
     with:
       regula-severity: off 
-      soft-fail: true 
+      soft-fail: false 
       github-token: $GITHUB_TOKEN
