--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -31,6 +31,9 @@ jobs:
     # Only run when the pull request is not in draft status
     if: github.event.pull_request.draft == false
     steps:
+      - name: Install sshuttle
+        run: sudo apt-get install -y sshuttle
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
