--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -33,6 +33,11 @@ jobs:
     steps:
       - name: Install sshuttle
         run: sudo apt-get install -y sshuttle sshpass iptables 
+      
+      - name: Install AWS SSM Plugin
+        run: |
+          curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb"
+          sudo dpkg -i sesion-manager-plugin.deb
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
