--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install AWS SSM Plugin
         run: |
           curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb"
-          sudo dpkg -i sesion-manager-plugin.deb
+          sudo dpkg -i session-manager-plugin.deb
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
