--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -14,6 +14,7 @@ on:
     paths-ignore:
       - "**.md"
       - "release-please-config.json"
+      - ".release-please-manifest.json"
 
 permissions:
   id-token: write
