--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -48,6 +48,8 @@ jobs:
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
+        with:
+          detached: true
 
       - name: Run Shared Test workfow
         uses: defenseunicorns/uds-common-workflows/.github/actions/terraform-test@main
