--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -45,6 +45,11 @@ jobs:
           # 21600 seconds == 6 hours
           # 1800 seconds == 30 minutes
           role-duration-seconds: 21600
+      
+      - name: AWS SSM SSH config
+        run: |
+          echo "host i-* mi-*" >> ~/.ssh/config
+          echo "	ProxyCommand sh -c \"aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters 'portNumber=%p'\"" >> ~/.ssh/config 
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
