small fixes bastion connect

--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -15,6 +15,7 @@ on:
       - "**.md"
       - "release-please-config.json"
       - ".release-please-manifest.json"
+      - "**.txt"
 
 permissions:
   id-token: write
