--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,8 +6,7 @@
             "changelog-path": "CHANGELOG.md",
             "changelog-type": "github",
             "release-type": "simple",
-            "bump-minor-pre-major": false,
-            "bump-patch-for-minor-pre-major": false,
+            "versioning": "always-bump-patch",
             "draft": false,
             "prerelease": false
         }
