--- a/.github/workflows/slash-command-dispatch.yml
+++ b/.github/workflows/slash-command-dispatch.yml
@@ -29,7 +29,7 @@ jobs:
         uses: peter-evans/slash-command-dispatch@v3
         with:
           token: ${{ secrets.PAT }}
-          repository: defenseunicorns/delivery-github-actions-workflows
+          repository: defenseunicorns/delivery-github-actions-workflows@ci/implement-ci
           commands: test
           permission: write
           issue-type: pull-request
@@ -46,7 +46,7 @@ jobs:
         uses: peter-evans/slash-command-dispatch@v3
         with:
           token: ${{ secrets.PAT }}
-          repository: defenseunicorns/delivery-github-actions-workflows
+          repository: defenseunicorns/delivery-github-actions-workflows@ci/implement-ci
           commands: update
           permission: write
           issue-type: pull-request
