do not renovate

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,3 +14,5 @@ jobs:
     uses: zack-is-cool/delivery-github-actions-workflows/.github/workflows/pre-commit.yml@main
     secrets:
       token: ${{ secrets.PAT}}
+    with:
+      check-types: '["common", "terraform", "golang"]'
