--- a/.github/workflows/test-command.yml
+++ b/.github/workflows/test-command.yml
@@ -39,3 +39,5 @@ jobs:
     uses: zack-is-cool/delivery-github-actions-workflows/.github/workflows/e2e-test.yml@main
     secrets:
       token: ${{ secrets.PAT }}
+      AWS_COMMERCIAL_ROLE_TO_ASSUME: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
+      AWS_GOVCLOUD_ROLE_TO_ASSUME: ${{ secrets.AWS_GOVCLOUD_ROLE_TO_ASSUME }}
