--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -10,9 +10,11 @@ permissions:
   contents: read
 
 jobs:
+
   pre-commit:
     uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/pre-commit.yml@main
     secrets:
-      token: ${{ secrets.PAT}}
+      APPLICATION_ID: ${{ secrets.NARWHAL_BOT_APP_ID }}
+      APPLICATION_PRIVATE_KEY: ${{ secrets.NARWHAL_BOT_SECRET }}
     with:
       check-types: '["common", "terraform", "golang"]'
