--- a/.github/workflows/test-command.yml
+++ b/.github/workflows/test-command.yml
@@ -13,10 +13,10 @@ defaults:
     shell: bash -e -o pipefail {0}
 
 jobs:
-
   e2e-test:
     uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/e2e-test.yml@main
     secrets:
-      token: ${{ secrets.PAT }}
+      APPLICATION_ID: ${{ secrets.NARWHAL_BOT_APP_ID }}
+      APPLICATION_PRIVATE_KEY: ${{ secrets.NARWHAL_BOT_SECRET }}
       AWS_COMMERCIAL_ROLE_TO_ASSUME: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
       AWS_GOVCLOUD_ROLE_TO_ASSUME: ${{ secrets.AWS_GOVCLOUD_ROLE_TO_ASSUME }}
