--- a/.github/workflows/update-command.yml
+++ b/.github/workflows/update-command.yml
@@ -13,8 +13,10 @@ defaults:
     shell: bash -e -o pipefail {0}
 
 jobs:
-
   update:
     uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/update.yml@main
     secrets:
-      token: ${{ secrets.PAT }}
+      APPLICATION_ID: ${{ secrets.NARWHAL_BOT_APP_ID }}
+      APPLICATION_PRIVATE_KEY: ${{ secrets.NARWHAL_BOT_SECRET }}
+      AWS_COMMERCIAL_ROLE_TO_ASSUME: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
+      AWS_GOVCLOUD_ROLE_TO_ASSUME: ${{ secrets.AWS_GOVCLOUD_ROLE_TO_ASSUME }}
