--- a/.github/workflows/update-command.yml
+++ b/.github/workflows/update-command.yml
@@ -14,7 +14,7 @@ defaults:
 
 jobs:
   update:
-    uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/update.yml@main
+    uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/update.yml@ci/refactor_for_github_app_token_expiration
     secrets:
       APPLICATION_ID: ${{ secrets.NARWHAL_BOT_APP_ID }}
       APPLICATION_PRIVATE_KEY: ${{ secrets.NARWHAL_BOT_SECRET }}
