--- a/.github/workflows/pull-request-opened-by-renovate.yml
+++ b/.github/workflows/pull-request-opened-by-renovate.yml
@@ -20,7 +20,7 @@ defaults:
 jobs:
   renovate-test:
     if: github.event.client_payload.github.actor == 'renovate[bot]' || github.actor == 'renovate[bot]'
-    uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/renovate-test.yml@main
+    uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/renovate-test.yml@ci/refactor_for_github_app_token_expiration
     secrets:
       APPLICATION_ID: ${{ secrets.NARWHAL_BOT_APP_ID }}
       APPLICATION_PRIVATE_KEY: ${{ secrets.NARWHAL_BOT_SECRET }}
