--- a/.github/workflows/test-command.yml
+++ b/.github/workflows/test-command.yml
@@ -14,7 +14,7 @@ defaults:
 
 jobs:
   e2e-test:
-    uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/e2e-test.yml@main
+    uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/e2e-test.yml@ci/refactor_for_github_app_token_expiration
     secrets:
       APPLICATION_ID: ${{ secrets.NARWHAL_BOT_APP_ID }}
       APPLICATION_PRIVATE_KEY: ${{ secrets.NARWHAL_BOT_SECRET }}
