--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -3,6 +3,9 @@ name: pre-commit
 
 on:
   pull_request:
+  merge_group:
+  workflow_dispatch:
+
 
 permissions:
   pull-requests: write
@@ -10,11 +13,8 @@ permissions:
   contents: read
 
 jobs:
-
   pre-commit:
     uses: defenseunicorns/delivery-github-actions-workflows/.github/workflows/pre-commit.yml@main
     secrets:
       APPLICATION_ID: ${{ secrets.NARWHAL_BOT_APP_ID }}
       APPLICATION_PRIVATE_KEY: ${{ secrets.NARWHAL_BOT_SECRET }}
-    with:
-      check-types: '["common", "terraform", "golang"]'
