--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,8 +16,8 @@ repos:
       - id: check-yaml
         args:
           - "--allow-multiple-documents"
-  - repo: https://github.com/sirosen/fix-smartquotes
-    rev: 0.2.0
+  - repo: https://github.com/sirosen/texthooks
+    rev: 0.6.2
     hooks:
       - id: fix-smartquotes
   - repo: https://github.com/tekwizely/pre-commit-golang
@@ -28,6 +28,7 @@ repos:
         args:
           - "--timeout=10m"
           - "--verbose"
+          - "--allow-parallel-runners"
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.83.5
     hooks:
@@ -46,6 +47,6 @@ repos:
         args:
           - --args=--config=__GIT_WORKING_DIR__/.tflint.hcl
   - repo: https://github.com/renovatebot/pre-commit-hooks
-    rev: 37.44.0
+    rev: 37.59.7
     hooks:
       - id: renovate-config-validator
