--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,22 +30,36 @@ repos:
           - "--verbose"
           - "--allow-parallel-runners"
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.89.1
+    rev: v1.91.0
     hooks:
       - id: terraform_fmt
-      - id: terraform_docs
+        args:
+          - --hook-config=--tf-path=tofu
+      # - id: terraform_docs
+      #   args:
+      #     - --args=--lockfile=false
+      #     - --hook-config=--path-to-file=README.md # Valid UNIX path. I.e. ../TFDOC.md or docs/README.md etc.
+      #     - --hook-config=--add-to-existing-file=true # Boolean. true or false
+      #     - --hook-config=--create-file-if-not-exist=true # Boolean. true or false
+      #     - --hook-config=--tf-path=tofu # currently terraform-docs doesn't support tofu https://github.com/terraform-docs/terraform-docs/issues/703
+      # - id: terraform_checkov
+      #   verbose: true
+      #   args:
+      #     - --args=--config-file __GIT_WORKING_DIR__/.checkov.yml
+      - id: terraform_tflint
+        args:
+          - --args=--config=__GIT_WORKING_DIR__/.tflint.hcl
+          - --args=--recursive
+          - --hook-config=--tf-path=tofu
+  - repo: https://github.com/tofuutils/pre-commit-opentofu
+    rev: v1.0.2 # Get the latest from: https://github.com/tofuutils/pre-commit-opentofu/releases
+    hooks:
+      - id: tofu_docs
         args:
           - --args=--lockfile=false
           - --hook-config=--path-to-file=README.md # Valid UNIX path. I.e. ../TFDOC.md or docs/README.md etc.
           - --hook-config=--add-to-existing-file=true # Boolean. true or false
           - --hook-config=--create-file-if-not-exist=true # Boolean. true or false
-      - id: terraform_checkov
-        verbose: true
-        args:
-          - --args=--config-file __GIT_WORKING_DIR__/.checkov.yml
-      - id: terraform_tflint
-        args:
-          - --args=--config=__GIT_WORKING_DIR__/.tflint.hcl
   - repo: https://github.com/renovatebot/pre-commit-hooks
     rev: 37.368.9
     hooks:
