--- a/.github/workflows/test-command.yml
+++ b/.github/workflows/test-command.yml
@@ -1,20 +1,19 @@
 # usage:
-  # A user with write status to the repo can from a PR comment:
+# A user with write status to the repo can from a PR comment:
 
-  # run a single test
-  # /test make=<make-target> region=<region>
+# run a single test
+# /test make=<make-target> region=<region>
 
-  # run ping test
-  # /test ping
+# run ping test
+# /test ping
 
-  # run all tests in the makefile
-  # /test
+# run all tests in the makefile
+# /test
 
 name: test
 on:
   repository_dispatch:
     types: [test-command]
-
 
 permissions:
   id-token: write
@@ -35,4 +34,4 @@ jobs:
       AWS_GOVCLOUD_ROLE_TO_ASSUME: ${{ secrets.NARWHAL_AWS_GOVCLOUD_ROLE_TO_ASSUME }}
     with:
       # check if the required slash command args are present, if so populate the json matrix, else pass in null and relevant e2e tests that would require a make target and region will be skipped
-      e2e-test-matrix: ${{ (contains(github.event.client_payload.slash_command_args.named, 'make') && contains(github.event.client_payload.slash_command_args.named, 'region')) && format('[{{"make-target":"{0}", "region":"{1}"}}]', github.event.client_payload.slash_command_args.named.make, github.event.client_payload.slash_command_args.named.region) || null }}
+      e2e-test-matrix: ${{ (contains(github.event.client_payload.slash_command.args.named, 'make') && contains(github.event.client_payload.slash_command.args.named, 'region')) && format('[{{"make-target":"{0}", "region":"{1}"}}]', github.event.client_payload.slash_command.args.named.make, github.event.client_payload.slash_command.args.named.region) || null }}
